For the latest news, visit the SparForte web site.

Objective:

CHANGES SINCE 2.4

1. New: doubly_linked_lists.parcel.

2. Fix: fixed "positive value is less than zero" error for a zero.

3. New: renaming a generic type.

4. Fix: missing filename at end-of-line for >, 2>, < no longer produce an
exception.  forgetting a "when" in a case statement with strings, which looks
like a shell command, is an error due to the big arrow.
