@@ -11,14 +11,14 @@ These are new issues identified but not entered into the outstanding bug list
 Priority Issues (Fix These First)
 -------------------------------
 
+- similarity tests should probably not apply to unformal scripts...check
+  this
 - shell parser rewrite
   - ls("-l") | wc -l does not work (legacy compiler issue) but the
     opposite works.
   - test sparforte as a login shell
 - interpreterPhase - is it set correctly in all places?
 - can I address dash shell compatibility?
-- why are in out parameters not references? e.g. in mysqlm and dbm, should
-  arrays of database connections be possible?
 - updating adascript shell commands to correspond with bourne shell changes
 - completions
   - a single matching directory lacks a trailing / - perhaps a GNU readline config issue
@@ -39,9 +39,6 @@ Priority Issues (Fix These First)
   - under some conditions, the breakout prompt my have end-of-file and be
     interpreted as a return to resume execution.  I have not identified what
     those conditions are.
-- Verify: recent Ada checks which might be useful
-  - run time: failure to assign to an out parameter.  e.g. define
-    the initial value as eof_t and check for it on subprogram end
 * Verify: waitToReveal sometimes throws an unexpected exception
 - Verify: raise in one of my exception handlers in SSDS did not function properly...
   investigate what happened.
@@ -66,6 +63,9 @@ Priority Issues (Fix These First)
 - unstructured scripts
   - Docs: additional examples to be added to automated tests
 - Refactor: static expressions
+- Refactor: in out parameters should return references
+  - why are in out parameters not references? e.g. in mysqlm and dbm, should
+    arrays of database connections be possible?
 - Change: csv support
      - Change: csv_replace - single quote, cr+lf ending
 * Fix: if the system shutdown, BDB locks are left in place
